<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
                   2018-2019 The LineageOS Project
                   2020-2024 Paranoid Android

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/glyph_settings_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="false"
        android:key="glyph_enable"
        android:title="@string/glyph_settings_enable" />

    <SwitchPreferenceCompat
        android:key="glyph_settings_auto_brightness_toggle"
        android:icon="@drawable/ic_auto_brightness"
        android:defaultValue="true"
        android:title="@string/glyph_settings_auto_brightness_toggle_title"
        android:summary="@string/glyph_settings_auto_brightness_toggle_summary" />

    <com.android.settingslib.widget.SliderPreference
        android:key="glyph_settings_brightness"
        android:title="@string/glyph_settings_brightness" />

    <SwitchPreferenceCompat
        android:key="glyph_settings_battery_saver_toggle"
        android:defaultValue="false"
        android:title="@string/glyph_settings_battery_saver_toggle_title"
        android:summary="@string/glyph_settings_battery_saver_toggle_summary" />

    <PreferenceCategory android:title="@string/glyph_settings_flip_title">

        <com.android.settingslib.PrimarySwitchPreference
            android:key="glyph_settings_flip_toggle"
            android:icon="@drawable/ic_flip"
            android:defaultValue="true"
            android:title="@string/glyph_settings_flip_toggle_title"
            android:summary="@string/glyph_settings_flip_toggle_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="co.aospa.glyph"
                android:targetClass="co.aospa.glyph.Settings.AnimationSettingsActivity">
                <extra android:name="type" android:value="flip" />
            </intent>

        </com.android.settingslib.PrimarySwitchPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="glyph_settings_call"
        android:title="@string/glyph_settings_call_title">

        <com.android.settingslib.PrimarySwitchPreference
            android:key="glyph_settings_call_toggle"
            android:icon="@drawable/ic_ring_volume"
            android:defaultValue="true"
            android:title="@string/glyph_settings_call_toggle_title"
            android:summary="@string/glyph_settings_call_toggle_summary" >
            <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="co.aospa.glyph"
                 android:targetClass="co.aospa.glyph.Settings.AnimationSettingsActivity">
                <extra android:name="type" android:value="call" />
            </intent>

        </com.android.settingslib.PrimarySwitchPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="glyph_settings_notifs"
        android:title="@string/glyph_settings_notifs_title" >

        <com.android.settingslib.PrimarySwitchPreference
            android:key="glyph_settings_notifs_toggle"
            android:defaultValue="true"
            android:icon="@drawable/ic_notification_alert"
            android:title="@string/glyph_settings_notifs_toggle_title"
            android:summary="@string/glyph_settings_notifs_toggle_summary" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="co.aospa.glyph"
                android:targetClass="co.aospa.glyph.Settings.AnimationSettingsActivity">
                <extra android:name="type" android:value="notifs" />
            </intent>
        </com.android.settingslib.PrimarySwitchPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="glyph_settings_charging"
        android:title="@string/glyph_settings_charging_title" >

            <SwitchPreferenceCompat
                android:key="glyph_settings_charging_level"
                android:icon="@drawable/ic_battery"
                android:defaultValue="true"
                android:title="@string/glyph_settings_charging_level_title"
                android:summary="@string/glyph_settings_charging_level_summary" />

            <SwitchPreferenceCompat
                android:key="glyph_settings_charging_powershare"
                android:icon="@drawable/ic_reverse_charging"
                android:defaultValue="true"
                android:title="@string/glyph_settings_charging_powershare_title"
                android:summary="@string/glyph_settings_charging_powershare_summary" />
    </PreferenceCategory>


    <PreferenceCategory
        android:key="glyph_settings_red_led"
        android:title="@string/glyph_settings_red_led_title">

        <SwitchPreferenceCompat
            android:key="glyph_settings_mic_activity_toggle"
            android:icon="@drawable/ic_mic"
            android:defaultValue="false"
            android:title="@string/glyph_settings_mic_activity_toggle_title"
            android:summary="@string/glyph_settings_mic_activity_toggle_summary" />

        <Preference
            android:key="glyph_settings_mic_activity_whitelist"
            android:icon="@drawable/ic_android"
            android:title="@string/glyph_settings_mic_activity_whitelist_title"
            android:summary="@string/glyph_settings_mic_activity_whitelist_summary" />

        <ListPreference
            android:key="glyph_settings_red_led_mode"
            android:icon="@drawable/ic_light_filled"
            android:title="@string/glyph_settings_red_led_mode_title"
            android:entries="@array/glyph_red_led_mode_entries"
            android:entryValues="@array/glyph_red_led_mode_values"
            android:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="glyph_settings_progress"
        android:title="@string/glyph_settings_progress_title">

        <SwitchPreferenceCompat
            android:key="glyph_settings_progress_toggle"
            android:defaultValue="false"
            android:icon="@drawable/ic_swap_horiz"
            android:title="@string/glyph_settings_progress_toggle_title"
            android:summary="@string/glyph_settings_progress_toggle_summary" />

        <SwitchPreferenceCompat
            android:key="glyph_settings_progress_media_toggle"
            android:defaultValue="false"
            android:icon="@drawable/ic_volume_media"
            android:title="@string/glyph_settings_progress_media_toggle_title"
            android:summary="@string/glyph_settings_progress_media_toggle_summary"
            android:dependency="glyph_settings_progress_toggle" />

        <Preference
            android:key="glyph_settings_progress_media_app_whitelist"
            android:icon="@drawable/ic_play"
            android:title="@string/glyph_settings_progress_media_app_whitelist_title"
            android:summary="@string/glyph_settings_progress_media_app_whitelist_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="glyph_settings_volume"
        android:title="@string/glyph_settings_volume_title">

        <SwitchPreferenceCompat
            android:key="glyph_settings_volume_level_toggle"
            android:defaultValue="true"
            android:icon="@drawable/ic_volume"
            android:title="@string/glyph_settings_volume_level_toggle_title"
            android:summary="@string/glyph_settings_volume_level_toggle_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="glyph_settings_misc"
        android:title="@string/glyph_settings_misc_title" />

        <Preference
            android:key="glyph_settings_schedule"
            android:title="@string/glyph_settings_schedule_title"
            android:icon="@drawable/ic_schedule"
            android:summary="@string/glyph_settings_schedule_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="co.aospa.glyph"
                android:targetClass="co.aospa.glyph.Settings.ScheduleSettingsActivity"/>
        </Preference>

    <PreferenceCategory
        android:key="glyph_settings_music_visualizer"
        android:title="@string/glyph_settings_music_visualizer_title" >

        <SwitchPreferenceCompat
            android:key="glyph_settings_music_visualizer_toggle"
            android:defaultValue="false"
            android:icon="@drawable/ic_music_visualizer"
            android:title="@string/glyph_settings_music_visualizer_toggle_title"
            android:summary="@string/glyph_settings_music_visualizer_toggle_summary" />

        <ListPreference
            android:key="glyph_settings_music_visualizer_mode"
            android:title="@string/glyph_settings_music_visualizer_mode_title"
            android:summary="%s"
            android:entries="@array/glyph_music_visualizer_mode_entries"
            android:entryValues="@array/glyph_music_visualizer_mode_values"
            android:defaultValue="0"
            android:dependency="glyph_settings_music_visualizer_toggle" />
    </PreferenceCategory>

    <PreferenceCategory>

        <Preference
            android:key="glyph_settings_utilities"
            android:title="@string/glyph_settings_utilities_title"
            android:summary="@string/glyph_settings_utilities_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="co.aospa.glyph"
                android:targetClass="co.aospa.glyph.Settings.SubSettingsActivity">
                <extra android:name="fragment" android:value=".Settings.Utilities.UtilitiesFragment" />
            </intent>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
